small changes in role separation

--- a/templates/customer/homepage.html
+++ b/templates/customer/homepage.html
@@ -66,13 +66,13 @@
 <body>
     <!-- Header -->
     <nav class="header d-flex justify-content-between align-items-center">
-        <h4>All Tickets</h4>
+        <h4>Your Tickets</h4>
         <button id="logout" class="btn logout-btn">Logout</button>
     </nav>
 
     <!-- Tickets Table -->
     <div class="container mt-4">
-        <h5>All Tickets</h5>
+        <h5>Your Tickets</h5>
         <div class="table-responsive">
             <table class="table table-striped table-hover">
                 <thead class="table-dark">
